[Karthik, Pradeep] #163 Fixed text misalignment in Windows IE8/Firefox bug

--- a/src/web/styles/styles.css
+++ b/src/web/styles/styles.css
@@ -471,7 +471,7 @@ li
 }
 
 .eventInfo .label{
-    width: 100px;
+    width: 110px;
 }
 
 .createEntryDateTime {
@@ -522,7 +522,7 @@ width: 100px;
 }
 
 #attendees{
-    width:90%
+    width:93%
 }
 
 .createEvent {
